# Homework_Home

QtDevelopment/Database/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtDevelopment/QtDesigner/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtDevelopment/QtModules/: CMakeLists.txt  main.cpp
QtDevelopment/StopWatch/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
QtDevelopment/UDPClient/: CMakeLists.txt  Receiver.h  UdpClient.cpp  UdpClient.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
QtDevelopment/Widgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
Задание 1 CMake/: CMakeLists.txt
Задание 2 CMake/: main.cpp
Задание 2 CMake/task3/: EqualTriangle.cpp  PifagorTriangle.cpp  Rhomb.cpp
Модуль 2 Базовое программирование/CMake/Задание 1 CMake/: Source1.cpp
Модуль 2 Базовое программирование/CMake/Задание 2 CMake/: CMakeLists.txt
Модуль 2 Базовое программирование/CMake/Задание 2 CMake/task3/: Parallelogramm.cpp  Rect.cpp  Square.cpp  SymmetricTriangle.cpp  shape.cpp  tetragon.cpp  triangle.cpp  triangle.h
Тестирование Задание 1/: TestFunctions.cpp  Testing.cpp  Testing.vcxproj  Testing.vcxproj.filters  extended_array.h
Тестирование Задание 2/: TestFunctions.h  Testing.cpp
Тестирование Задание 2/x64/Debug/: Testing.exe.recipe  Testing.ilk  Testing.vcxproj.FileListAbsolute.txt  vc143.idb
Тестирование Задание 2/x64/Debug/Testing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Testing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Тестирование Задание 3/: TestFunctions.h  Testing.cpp  Testing.vcxproj  Testing.vcxproj.filters  extended_array.h
Тестирование Задание 3/x64/Debug/: Testing.exe.recipe  Testing.ilk  Testing.vcxproj.FileListAbsolute.txt  vc143.idb
Тестирование Задание 3/x64/Debug/Testing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Testing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
